--- a/homework_1_Log_Analyzer/log_analyzer/config.json
+++ b/homework_1_Log_Analyzer/log_analyzer/config.json
@@ -2,6 +2,6 @@
     "REPORT_SIZE": 1000,
     "REPORT_DIR": "./reports",
     "LOG_DIR": "./log",
-    "parsing_error_limit_perc": 10,
-    "progress_inform_mode": 1
+    "PARSING_ERROR_LIMIT_PERC": 10,
+    "PROGRESS_INFORM_MODE": 1
 }
